--- a/login.html
+++ b/login.html
@@ -19,16 +19,15 @@
 
       <div class="campo">
         <label>E-mail</label>
-        <input type="email" id="email" placeholder="admin@ufcspa.edu.br">
+        <input type="email" id="email">
       </div>
 
       <div class="campo">
         <label>Senha</label>
-        <input type="password" id="senha" placeholder="123456">
+        <input type="password" id="senha">
       </div>
 
       <button onclick="login()">Entrar</button>
-
       <p class="erro" id="erro"></p>
     </div>
 
