--- a/grade.html
+++ b/grade.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Grade Horária</title>
-  <link rel="stylesheet" href="grade.css">
+  <link rel="stylesheet" href="/css/grade.css">
 </head>
 <body>
 
@@ -109,6 +109,6 @@
 
 </div>
 
-<script src="grade.js"></script>
+<script src="/js/grade.js"></script>
 </body>
 </html>
