--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Login - Grade Horária</title>
-  <link rel="stylesheet" href="login.css">
+  <link rel="stylesheet" href="/css/login.css">
 </head>
 <body>
 
@@ -34,6 +34,6 @@
   </div>
 </div>
 
-<script src="login.js"></script>
+<script src="/js/login.js"></script>
 </body>
 </html>
